--- a/code/02 JS Refresher/code/presence-study/index.html
+++ b/code/02 JS Refresher/code/presence-study/index.html
@@ -24,6 +24,7 @@
     <li>Browser APIs & The DOM</li>
     <li>Essential Features Used By React</li>
     <li>Tricky Parts</li>
+    <li>Lucid Awareness</li>
   </ul>
 </body>
 </html>
